# Abacus

./: CMakeLists.txt  README.md
include/Abacus/: AST.h  Abacus.h  Log.h  Visitor.h
sources/: AST.cpp  Abacus.cpp  Beautifier.cpp  Beautifier.h  Computer.cpp  Computer.h  ExprProcessor.cpp  ExprProcessor.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.h  Variable.cpp  Variable.h
sources/precpkg/: fprecision.h  iprecision.h  precisioncore.cpp
sources/ui/: AbacusIcon-LICENSE.txt  History.h  Input.cpp  Input.h  Main.cpp  WinFrame.cpp  WinFrame.h
spec/: Abacus-Grammar-Spec.g4  Concept.txt
test/: test1.cpp
